--- a/assets/src/sass/main.scss
+++ b/assets/src/sass/main.scss
@@ -12,22 +12,24 @@
 
 //app level
 //@import "components/list";
-//@import "components/buttons";
-@import "components/login";
+@import "components/buttons";
 //@import "components/layout-mask";
 
-//@import "components/pages/home";
+@import "components/pages/splash";
+@import "components/pages/customizer";
+@import "components/carParts/wheels";
+@import "components/carParts/body";
 //@import "components/pages/session-list";
 
 //@import "components/mdl/card";
 
-html {
-  font-size: 18px;
-  @media (max-width: 1400px) { font-size: 18px; }
-  @media (max-width: 1200px) { font-size: 16px; }
-  @media (max-width: 1024px) { font-size: 14px; }
-  @media (max-width: 500px) { font-size: 12px; }
-}
+// html {
+//   font-size: 18px;
+//   @media (max-width: 1400px) { font-size: 18px; }
+//   @media (max-width: 1200px) { font-size: 16px; }
+//   @media (max-width: 1024px) { font-size: 14px; }
+//   @media (max-width: 500px) { font-size: 12px; }
+// }
 
 body {
   background-color: #F5F5F5;
