--- a/packages/car-customizer/components/carCustomizer.html
+++ b/packages/car-customizer/components/carCustomizer.html
@@ -1,19 +1,35 @@
 <template name="carCustomizer">
   <div class="page-customizer">
-    <div class="car-preview">
-      <div class="car-preview__body">
-        <div class="rectangle">
-          
+    {{#with car}}
+      <div class="car-preview">
+        <div class="car-preview__body">
+          <div style="background: {{this.body.color}};" class="{{this.body.type}}"></div>
+        </div>
+        <div class="car-preview__wheels">
+          <div style="background: {{this.wheels.color}};" class="{{this.wheels.type}}"></div>
+          <div style="background: {{this.wheels.color}};" class="{{this.wheels.type}}"></div>
         </div>
       </div>
-      <div class="car-preview__wheels">
-        <div class="pentagon">
-          
+      <div class="car-options">
+        <div class="car-body">
+          <div class="car-body__title">Car Body</div>
+          <div class="car-body__parts">
+            {{> carOptions bodyTypeContext}}
+          </div>
+          <div class="car-body__colors">
+            {{> carOptions bodyColorContext}}
+          </div>
         </div>
-        <div class="pentagon">
-          
+        <div class="car-wheels">
+          <div class="car-wheels__title">Car Wheels</div>
+          <div class="car-wheels__parts">
+            {{> carOptions wheelsTypeContext}}
+          </div>
+          <div class="car-wheels__colors">
+            {{> carOptions wheelsColorContext}}
+          </div>
         </div>
       </div>
-    </div>
+    {{/with}}
   </div>
 </template>
