--- a/assets/src/sass/config/_colors.scss
+++ b/assets/src/sass/config/_colors.scss
@@ -1,11 +1,4 @@
-// $white: #ddd;
-// $black: #999;
+$background: #F5F5F5;
+$black: #212121;
 
-$white: #fff;
-$black: #000;
-
-$color-links: #666;
-$overlay-color: #000;
-$overlay-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-$main-color: #fff;
-$main-color-darken: darken($main-color, 10%);
+$main-blue: #3F51B5;
