--- a/packages/car-customizer/components/carsList.html
+++ b/packages/car-customizer/components/carsList.html
@@ -13,6 +13,9 @@
         </div>
         <div class="car-preview">
           <div class="car-preview__body">
+            <div class="body-brand">
+              <img src="{{getBrand.logoUrl}}">
+            </div>
             <div style="background: {{getBodyColor}};" class="{{getBodyType}}"></div>
           </div>
           <div class="car-preview__wheels">
