--- a/app/client/css/main.css
+++ b/app/client/css/main.css
@@ -1,6 +1,3 @@
-._center {
-  text-align: center; }
-
 .button-container {
   text-align: center;
   margin-bottom: 20px; }
@@ -15,14 +12,9 @@
     font-size: 18px;
     font-weight: 200; }
 
-.car-options .car-name__title, .car-options .car-body__title, .car-options .car-wheels__title {
-  color: #3F51B5;
-  font-size: 24px;
-  font-weight: 200;
-  margin-bottom: 24px; }
-
 .car {
-  max-width: 500px;
+  max-width: 680px;
+  height: 320px;
   margin: auto;
   margin-bottom: 24px;
   background-color: #ffffff;
@@ -45,6 +37,15 @@
       max-width: 400px; }
       .car .car-container .car-preview__body {
         position: relative; }
+        .car .car-container .car-preview__body .body-brand {
+          position: absolute;
+          text-align: center;
+          z-index: 1;
+          top: 16px;
+          width: 100%;
+          height: 50px; }
+          .car .car-container .car-preview__body .body-brand img {
+            height: 100%; }
       .car .car-container .car-preview__wheels {
         position: absolute;
         width: 100%;
@@ -59,7 +60,6 @@
           position: absolute;
           right: 20px; }
   .car .car-actions {
-    margin-top: 24px;
     border-top: 1px solid #eeeeee;
     padding: 16px;
     text-align: right; }
@@ -68,7 +68,15 @@
     .car .car-actions button:first-child {
       margin-right: 12px; }
 
+.car-options .car-name__title, .car-options .car-body__title, .car-options .car-wheels__title, .car-options .car-brands__title {
+  color: #3F51B5;
+  font-size: 24px;
+  font-weight: 200;
+  margin-bottom: 24px; }
+
 .car-options {
+  max-width: 680px;
+  margin: auto;
   margin-top: 16px; }
   .car-options .car-name {
     margin-bottom: 24px; }
@@ -76,6 +84,57 @@
     margin-bottom: 24px; }
   .car-options .car-wheels {
     margin-bottom: 24px; }
+  .car-options .car-brands {
+    margin-bottom: 24px; }
+    .car-options .car-brands .brands-container {
+      display: -webkit-flex;
+      display: flex;
+      -webkit-justify-content: space-between;
+      justify-content: space-between; }
+      @media (max-width: 676px) {
+        .car-options .car-brands .brands-container {
+          -webkit-flex-direction: column;
+          flex-direction: column; } }
+      .car-options .car-brands .brands-container .brand-info {
+        display: -webkit-flex;
+        display: flex;
+        -webkit-flex: 0 200px;
+        flex: 0 200px;
+        -webkit-flex-direction: column;
+        flex-direction: column;
+        -webkit-justify-content: center;
+        justify-content: center;
+        -webkit-align-items: center;
+        align-items: center;
+        -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+        -moz-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+        box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+        position: relative;
+        height: 200px;
+        background-color: #ffffff; }
+        @media (max-width: 676px) {
+          .car-options .car-brands .brands-container .brand-info {
+            margin-bottom: 16px; } }
+        .car-options .car-brands .brands-container .brand-info .selected-state {
+          width: 30px;
+          height: 30px;
+          background-color: #3F51B5;
+          border-radius: 50%;
+          position: absolute;
+          top: 10px;
+          right: 10px; }
+          .car-options .car-brands .brands-container .brand-info .selected-state i {
+            position: absolute;
+            top: calc(50% - 12px);
+            color: white;
+            left: calc(50% - 12px); }
+        .car-options .car-brands .brands-container .brand-info .brand-logo {
+          margin-bottom: 10px; }
+          .car-options .car-brands .brands-container .brand-info .brand-logo img {
+            max-height: 100px; }
+        .car-options .car-brands .brands-container .brand-info .brand-name {
+          font-size: 18px;
+          font-weight: 300; }
 
 .car-preview__wheels .circle {
   width: 120px;
@@ -83,6 +142,10 @@
   -moz-border-radius: 60px;
   -webkit-border-radius: 60px;
   border-radius: 60px; }
+  @media (max-width: 676px) {
+    .car-preview__wheels .circle {
+      width: 80px;
+      height: 80px; } }
 
 .car-preview__wheels .oval {
   width: 160px;
@@ -90,10 +153,18 @@
   -webkit-border-radius: 100px / 50px;
   -moz-border-radius: 100px / 50px;
   border-radius: 100px / 50px; }
+  @media (max-width: 676px) {
+    .car-preview__wheels .oval {
+      width: 120px;
+      height: 80px; } }
 
 .car-preview__wheels .square {
   width: 120px;
   height: 120px; }
+  @media (max-width: 676px) {
+    .car-preview__wheels .square {
+      width: 80px;
+      height: 80px; } }
 
 .car-preview__body .rectangle {
   width: 100%;
@@ -123,6 +194,9 @@
   -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
   -moz-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12); }
+  .option-block.-selected {
+    border-radius: 5px;
+    border: 2px solid #3F51B5; }
   .option-block__inner {
     display: -webkit-flex;
     display: flex;
@@ -162,6 +236,3 @@ body {
   margin-left: auto;
   margin-right: auto;
   padding: 24px 24px 0 24px; }
-
-.mdl-layout__header {
-  z-index: 1; }
